Fix word spacing

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -101,6 +101,7 @@ html {
   text-align:     var(--text-align);
   font-family:    var(--font-family);
   line-height:    var(--line-height);
+  word-spacing:   var(--word-spacing);
   letter-spacing: var(--letter-spacing);
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/tab-size */
   -moz-tab-size:  var(--tab-size);
